--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -12,10 +12,10 @@
   <link rel="icon" href="/reflections/assets/favicon.ico">
 
   <!-- Social preview (keep as-is) -->
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/assets/logo.png">
+  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/thegodwecreated.png">
   <meta property="og:image:width" content="240">
   <meta property="og:image:height" content="371">
-  <meta property="og:image:alt" content="A Journey from Duality to Oneness">
+  <meta property="og:image:alt" content="When questions grow louder than the answers we were told.">
 
   <!-- Global assets -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
