--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -300,6 +300,16 @@
       0% { transform: translateX(0); }
       100% { transform: translateX(-100%); }
     }
+    /* Smooth right-to-left subtitle scroll */
+.scrolling-subtitle span {
+  animation: smoothScroll 18s linear infinite;
+}
+
+@keyframes smoothScroll {
+  0% { transform: translateX(100%); }   /* start off-screen on the right */
+  10% { transform: translateX(0); }     /* glide in smoothly */
+  100% { transform: translateX(-100%); } /* scroll fully to the left */
+}
   </style>
 </section>
 
