--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -1,1 +1,158 @@
-reas
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <title>The Primacy of Moral Accountability — Ninox Antolihao</title>
+
+  <!-- Disclaimer -->
+  <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="The Primacy of Moral Accountability — Ninox Antolihao">
+  <meta property="og:image" content="cover.jpg">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/primacy-of-moral-accountability/read.html">
+
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+
+  <style>
+    /* Minimalist fixed header */
+    .header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background: #ffffffee;
+      backdrop-filter: blur(8px);
+      padding: 12px 16px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 1000;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .header .title {
+      font-size: 16px;
+      font-weight: bold;
+      color: #111;
+    }
+
+    .nav-buttons {
+      display: flex;
+      gap: 10px;
+    }
+
+    .nav-buttons button {
+      background: #1f1f1f;
+      color: #fff;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 4px;
+      font-size: 13px;
+    }
+
+    .content {
+      margin-top: 90px;
+      padding: 18px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.65;
+      font-size: 17px;
+    }
+
+    /* Smooth subtitle scroll */
+    .scrolling-subtitle {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      position: relative;
+      margin-top: 6px;
+      color: #444;
+      font-size: 14px;
+    }
+
+    .scrolling-subtitle span {
+      display: inline-block;
+      animation: smoothScroll 18s linear infinite;
+    }
+
+    @keyframes smoothScroll {
+      0% { transform: translateX(100%); }
+      10% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+  </style>
+
+  <!-- Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js');
+    }
+  </script>
+</head>
+
+<body>
+
+  <!-- HEADER -->
+  <div class="header">
+    <div>
+      <div class="title">The Primacy of Moral Accountability</div>
+      <div class="scrolling-subtitle">
+        <span>A reflection on will, love, and divine design.</span>
+      </div>
+    </div>
+
+    <div class="nav-buttons">
+      <button onclick="history.back()">Back</button>
+      <button onclick="sharePage()">Share</button>
+      <button onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
+    </div>
+  </div>
+
+  <!-- CONTENT -->
+  <div class="content">
+
+    <!-- AUDIO PLAYER -->
+    <audio id="reflectionAudio" controls preload="metadata">
+      <source src="primacyofmoralaccountability.mp3" type="audio/mpeg">
+    </audio>
+
+    <hr />
+
+    <h2>The Primacy of Moral Accountability<br>
+    <span style="font-size:16px; color:#555;">A Reflection on Will, Love, and Design</span></h2>
+
+    <p>Our philosophical journey has moved from the observable mechanics of the universe to the profound ethical tension at the heart of the divine. This reflection is centered on the paradoxes that emerge when seeking to reconcile a perfect, all-powerful, and unconditionally loving creator with the ambiguity and suffering that define the human condition. The culmination of this inquiry is the powerful realization that the value of individual moral choice must surpass the obligation of simple obedience.</p>
+
+    <p>The traditional concept of a perfect God immediately encounters two fundamental challenges. First, the Paradox of Evil—the existence of immense, unwarranted suffering—seems incompatible with boundless power and love. If an entity is truly perfect, its creation should reflect an overflow of goodness, not a system designed with such pervasive flaws and dangers. Second, the Paradox of the Hidden God questions the logic of the relationship itself. If a creator genuinely desires a free and loving relationship with humanity, why establish the connection through distance, ambiguity, and the requirement of faith—a belief that must be accepted before any certain knowledge is provided?</p>
+
+    <p>The theological defense for this flawed design rests on the gift of free will. This freedom, while necessary for genuine love, introduces a moral risk that guarantees failure, suffering, and distance. This risk assessment, however, leads to the most critical ethical challenge: the demand for blind obedience. To require belief without verifiable evidence is to ask the individual to suppress the very tools—reason and critical thought—that protect them from deception and manipulation. In the context of religious authority, this blind faith becomes a vulnerability, enabling control and dissolving personal moral accountability.</p>
+
+    <p>This is where the distinction between two forms of faith becomes essential. The faith of blind obedience is ethically shallow; it is driven by fear of punishment or hope of reward, motivated purely by external rules. The value of the person is measured by compliance, which is easily counterfeited.</p>
+
+    <p>Conversely, the highest ethical standard is found in Real Faith—the authentic alignment of one's actions with one's deepest moral convictions. This form of faith requires integrity and moral choice.</p>
+
+    <p>The final, compelling realization is this: If a just and omniscient God is to administer judgment, that judgment cannot possibly be based on whether a person simply followed directions. A just measure must be based on the individual’s moral struggle—the sincerity and effort involved in using reason and conscience to discern good from evil. The ambiguity of the system ultimately forces the individual away from the easy path of compliance and toward the difficult, autonomous work of developing true moral character. Thus, the integrity of a single, self-directed moral choice is fundamentally more important, and more deserving of recognition, than any act of unquestioning obedience.</p>
+
+  </div>
+
+  <script>
+    function sharePage() {
+      if (navigator.share) {
+        navigator.share({
+          title: "The Primacy of Moral Accountability — Ninox Antolihao",
+          url: window.location.href
+        });
+      } else {
+        alert("Sharing not supported on this device.");
+      }
+    }
+  </script>
+
+</body>
+</html>
