--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -13,7 +13,7 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Primacy of Moral Accountability — Ninox Antolihao">
-  <meta property="og:image" content="cover.jpg">
+  <meta property="og:image" content="devinepremise1.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html">
 
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
@@ -119,7 +119,10 @@
 
     <!-- AUDIO PLAYER -->
     <audio id="reflectionAudio" controls preload="metadata">
-      <source src="primacyofmoralaccountability.mp3" type="audio/mpeg">
+      <source src="premiseofgod.mp3" type="audio/mpeg">
+    </audio>
+      <audio id="reflectionAudio" controls preload="metadata">
+      <source src="initial-premise.mp3" type="audio/mpeg">
     </audio>
 
     <hr />
