--- a/reflections/index.html
+++ b/reflections/index.html
@@ -51,7 +51,7 @@
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/divine-hiddenesd/read.html" target="_blank" rel="noopener">the diety</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/divine-hiddenesd/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
           <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf" target="_blank" rel="noopener">PDF</a></p>
         <section class="audio-wrap" id="audioMount-diety">
