--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -122,7 +122,7 @@
       <source src="premiseofgod.mp3" type="audio/mpeg">
     </audio>
       <audio id="reflectionAudio" controls preload="metadata">
-      <source src="initial-premise.mp3" type="audio/mpeg">
+      <source src="reflections/pages/initial-premise/initial-premise.mp3" type="audio/mpeg">
     </audio>
 
     <hr />
