--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -118,12 +118,80 @@
   <div class="content">
 
     <!-- AUDIO PLAYER -->
-    <audio id="reflectionAudio" controls preload="metadata">
-      <source src="premiseofgod.mp3" type="audio/mpeg">
-    </audio>
-      <audio id="reflectionAudio" controls preload="metadata">
-      <source src="reflections/pages/initial-premise/initial-premise.mp3" type="audio/mpeg">
-    </audio>
+   <!-- 🎧 Audio Player with playlist -->
+    <section class="audio-wrap">
+      <div class="audio-wrapper">
+        <audio id="reflectionAudio" controls preload="metadata">
+          <source id="audioSource" src="" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+
+        <div class="playlist">
+          <div class="playlist-row active"
+               data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
+            <div class="playlist-main">
+              <div class="playlist-title">The Divine Premise</div>
+              <div class="playlist-sub">a reflection on WILL, LOVE and DESIGN</div>
+            </div>
+            <div class="playlist-duration">--:--</div>
+          </div>
+
+          <div class="playlist-row"
+               data-src="/reflections/pages/initial-premise/initial-premise.mp3">
+            <div class="playlist-main">
+              <div class="playlist-title">Premise of a perfect living God</div>
+              <div class="playlist-sub">Alternative narration</div>
+            </div>
+            <div class="playlist-duration">--:--</div>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        (function () {
+          const audioPlayer = document.getElementById('reflectionAudio');
+          const audioSource  = document.getElementById('audioSource');
+          const rows         = document.querySelectorAll('.playlist-row');
+
+          // Default track = first row
+          if (rows.length > 0) {
+            const firstSrc = rows[0].dataset.src;
+            audioSource.src = firstSrc;
+            audioPlayer.load();
+          }
+
+          // Click to switch track
+          rows.forEach(row => {
+            row.addEventListener('click', () => {
+              rows.forEach(r => r.classList.remove('active'));
+              row.classList.add('active');
+
+              const src = row.dataset.src;
+              audioSource.src = src;
+              audioPlayer.load();
+              audioPlayer.play().catch(() => {});
+            });
+          });
+
+          // Auto-fill durations when metadata is available
+          rows.forEach(row => {
+            const src = row.dataset.src;
+            const tempAudio = new Audio(src);
+            tempAudio.addEventListener('loadedmetadata', () => {
+              const dur = tempAudio.duration;
+              if (!isNaN(dur)) {
+                const total = Math.floor(dur);
+                const min = String(Math.floor(total / 60)).padStart(2, '0');
+                const sec = String(total % 60).padStart(2, '0');
+                const durEl = row.querySelector('.playlist-duration');
+                if (durEl) durEl.textContent = `${min}:${sec}`;
+              }
+            });
+          });
+        })();
+      </script>
+    </section>
+
 
     <hr />
 
