--- a/reflections/index.html
+++ b/reflections/index.html
@@ -45,16 +45,16 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/divine-hiddennes/devinepremise.jpg"
+                 src="/reflections/pages/divine-hiddeness/devinepremise.jpg"
                  alt="the divine premise cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
         </div>
         <div class="right">
-          <h3><a class="title-link" href="/reflections/pages/divine-hiddenesd/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
+          <h3><a class="title-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
           <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love</p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf" target="_blank" rel="noopener">PDF</a></p>
-        <section class="audio-wrap" id="audioMount-diety">
+        <section class="audio-wrap" id="audioMount-divinepremise">
             <p class="label">🎧 Audio Reflection: <strong>The Divine Premise if a perfect loving God</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/divine-hiddeness/premiseofgod.mp3" type="audio/mpeg">
@@ -63,7 +63,7 @@
         </section>
           
           <div class="share-group"
-               data-share-url="https://stonegrillresto.net/reflections/pages/devine-hiddeness/read.html"
+               data-share-url="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html"
                data-share-title="the Divine Premise — Ninox Antolihao"></div>
         </div>
       </article>
