--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -131,7 +131,7 @@
                data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
             <div class="playlist-main">
               <div class="playlist-title">The Divine Premise</div>
-              <div class="playlist-sub">a reflection on WILL, LOVE and DESIGN</div>
+              <div class="playlist-sub">a narrative reflection</div>
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
@@ -139,8 +139,8 @@
           <div class="playlist-row"
                data-src="/reflections/pages/initial-premise/initial-premise.mp3">
             <div class="playlist-main">
-              <div class="playlist-title">Premise of a perfect living God</div>
-              <div class="playlist-sub">Alternative narration</div>
+              <div class="playlist-title">Premise of God</div>
+              <div class="playlist-sub">narration 2</div>
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
