--- a/reflections/index.html
+++ b/reflections/index.html
@@ -52,10 +52,10 @@
         </div>
         <div class="right">
           <h3><a class="title-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
-          <p>What if the god who made this world — with its wars, cancers, and cruelty — isn’t the ultimate source of love</p>
+          <p>the premise of a perfect living God. </p>
           <p class="meta">First Edition 2025 • <a class="title-link" href="/reflections/pages/diety/The_False_God_Reflection_by_Ninox copy.pdf" target="_blank" rel="noopener">PDF</a></p>
         <section class="audio-wrap" id="audioMount-divinepremise">
-            <p class="label">🎧 Audio Reflection: <strong>The Divine Premise if a perfect loving God</strong></p>
+            <p class="label">🎧 Audio Reflection: <strong>divine premise</strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/divine-hiddeness/premiseofgod.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
