--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>The Primacy of Moral Accountability — Ninox Antolihao</title>
+  <title>The Premise of a Perfect and loving God — Ninox Antolihao</title>
 
   <!-- Disclaimer -->
   <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
