--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -12,7 +12,7 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Primacy of Moral Accountability — Ninox Antolihao">
+  <meta property="og:title" content="The Premise of a Perfect and loving God - Solitude Reflections">
   <meta property="og:image" content="devinepremise1.jpg">
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html">
 
