--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -319,7 +319,7 @@
     <hr />
 
     <h2>The Devine premise of a perfect and loving God<br>
-    <span style="font-size:16px; color:#555;">A Reflection on Will, Love, and Design</span></h2>
+    <span style="font-size:16px; color:#555;">Ninox Antolihao • First Edition ©2025 </span></h2>
 
     <p>Our philosophical journey has moved from the observable mechanics of the universe to the profound ethical tension at the heart of the divine. This reflection is centered on the paradoxes that emerge when seeking to reconcile a perfect, all-powerful, and unconditionally loving creator with the ambiguity and suffering that define the human condition. The culmination of this inquiry is the powerful realization that the value of individual moral choice must surpass the obligation of simple obedience.</p>
 
