--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -130,8 +130,9 @@
           <div class="playlist-row active"
                data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3">
             <div class="playlist-main">
+              <div class="playlist-sub">Track-1</div>
               <div class="playlist-title">The Divine Premise</div>
-              <div class="playlist-sub">a narrative reflection</div>
+              
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
@@ -139,8 +140,9 @@
           <div class="playlist-row"
                data-src="/reflections/pages/initial-premise/initial-premise.mp3">
             <div class="playlist-main">
+              <div class="playlist-sub">Track-2</div>
               <div class="playlist-title">Premise of God</div>
-              <div class="playlist-sub">narration 2</div>
+              
             </div>
             <div class="playlist-duration">--:--</div>
           </div>
